samples/_failures_safe/1761648951_edad74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c15a97c5.c: In function ‘main’:
./samples/SAFE/__tmp_c15a97c5.c:150:5: error: expected declaration or statement at end of input
  150 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_c15a97c5.c:150:5: error: expected declaration or statement at end of input
